Made the logo look good in all sizes, small fix for the username's tooltip, and updated bootstrap to 2.0.1
Updating bootstrap to 2.0.1 has made the Submit button not line up
correctly...

--- a/css/app.css
+++ b/css/app.css
@@ -50,22 +50,18 @@ textarea[readonly] {
 
 #logo-container {
   background-color:#000000;
-  height:94px;
   margin:20px 0;
   overflow:hidden;
   position:relative;
-  width:940px;
 }
 
 #logo-container .logo-bg {
   display:none;
   float:left;
   position:relative;
-  width:94px;
 }
 
 #logo-container #logo {
-  height:94px;
   left:0px;
   position:absolute;
   top:0px;
